# Structured-Thinking-Model

./: README.md  SKILL.md  pyproject.toml  requirements.txt
references/: api-reference.md  best-practices.md  brand-value.md  business-frameworks.md  consumer-insight.md  industry-competition.md  loyalty-satisfaction.md  macro-environment.md  strategy-capability.md  strategy-matrices.md  thinking-models.md
skill01/: __init__.py  base_analyzer.py  brand_analyzer.py  config.py  consumer_analyzer.py  industry_analyzer.py  loyalty_analyzer.py  macro_analyzer.py  report_generator.py  strategy_analyzer.py  templates.py  utils.py
skill01/tests/: test_all.py
